--- a/CSS/er.css
+++ b/CSS/er.css
@@ -150,7 +150,7 @@ img {
 }
 
 .header-bg {
-  background-image: url("./img/bg.jpg");
+  background-image: url("./img/bg.jfif");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: left center;
