--- a/CSS/awite.css
+++ b/CSS/awite.css
@@ -25,3 +25,28 @@
 
 
 }
+.brand_{
+    width: 90px;
+    height: 50px;
+    position: absolute;
+    background: rgb(255, 213, 213);
+    top: 16px;
+    left: -20px;
+    transform: rotate(90deg);
+}
+.brand_ span{
+    position: absolute;
+    background: transparent;
+    top: 20%;
+    left: 30%;
+    
+}
+.brand_::before{
+    content: '';
+    color: #000;
+    position: absolute;
+    width: 30px;height: 30px;background: transparent;
+    top: 20%;
+    right: -16.9%;
+    transform: rotate(45deg);
+}
