--- a/CSS/STYLE.css
+++ b/CSS/STYLE.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background: #ffffff;
+  background: #fff1f1;
   overflow-x: hidden;
 }
 body.sm{
@@ -89,20 +89,24 @@ img {
 }
 
 .navbar-top .dropdown .dropdown-content {
-  display: -webkit-box;
-  display: -ms-flexbox;
+  
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
+    -ms-flex-direction: column;
           flex-direction: column;
   position: absolute;
-  min-width: 100px;
+  min-width: 200px;
   display: none;
   z-index: 2;
-  background: #ff9b9b;
+  background: #5eddd7;
   color: #f8788d;
   text-align: center;
+  
+}
+.navbar-top .dropdown .d1{
+  min-width: 300px;
+
 }
 
 .navbar-top .dropdown .dropdown-content a {
