--- a/CSS/awite.css
+++ b/CSS/awite.css
@@ -27,14 +27,15 @@
 }
 .brand_{
     width: 90px;
-    height: 50px;
+    height: 25px;
     position: absolute;
     background: rgb(255, 213, 213);
-    top: 16px;
-    left: -20px;
-    transform: rotate(90deg);
+    top: 0px;
+    right: -30px;
+    transform: rotate(45deg);
 }
 .brand_ span{
+    text-align: center;
     position: absolute;
     background: transparent;
     top: 20%;
@@ -42,6 +43,7 @@
     
 }
 .brand_::before{
+   
     content: '';
     color: #000;
     position: absolute;
@@ -76,35 +78,67 @@
 }
 
 
+#result_search{
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 40px;
+}
 
-.menu-food .cards .card .desc .img-card{
+.menu-food .cards .card .desc .img-card,#result_search  .card .desc .img-card{
  
     width: 100%;
 }
-.menu-food .cards .card .desc{
+.menu-food .cards .card .desc,#result_search  .card .desc .img-card{
    
     display: grid;
     grid-template-columns: 25% 75%;
 }
+.exprore-foods{
+    display: grid;
+    grid-gap: 50px 0;
+   max-width: 80%;
+    margin: 0 auto;
+}
+.content {
+  background: rgb(219, 179, 85);
+    border-bottom-right-radius:95px ;
+    border-top-left-radius:95px ;
+    padding: 20px;
+    border: 1px solid #000;
+   
+
+}
+.exprore-foods .content .img-content{
+    height: 30%;
+    width: 30%;
+    float: left;
+    border: 1px solid #000;
+      margin: 20px;
+      border-radius: 34px;
+}
+.exprore-foods .content .img-content img{
+    object-fit: cover;
+    border-radius: 34px;
+}
 @media screen and (max-width:700px){
-    .menu-food .cards{
+    .menu-food .cards,#result_search {
         display: flex;
         flex-direction: column;
         
      }
      
-     .menu-food .cards .card .desc{
+     .menu-food .cards .card .descو,#result_search  .card .desc .img-card{
           display: grid;
           grid-template-columns:100%;
     }
-    .menu-food .cards .card .desc .img-card{
+    .menu-food .cards .card .desc .img-cardو,#result_search  .card .desc .img-card{
          width: 20%;
          margin: 10px;
          display: block;
          margin-left: auto;
          margin-right: auto;
     }
-    .menu-food .cards .card .desc .text-card{
+    .menu-food .cards .card .desc .text-cardو,#result_search .card .desc .img-card{
         width: 100%;
     }
     .dropdown-content .shop_card{
@@ -130,6 +164,23 @@
         z-index: 500;
         
     }
+    .content{
+        display: grid;
+        padding: 5px;
+        grid-gap: 0;
+
+    }
+    .exprore-foods .content .img-content{
+        height: 70%;
+        width: 70%;
+        border: 1px solid #000;
+        border-radius: 34px;
+        margin: 0 auto;
+    }
+    .exprore-foods .content .txt-content{
+        margin-top: -10vw;
+    }
+
  }
  
  @media screen and (max-width:400px){
