--- a/CSS/awite.css
+++ b/CSS/awite.css
@@ -194,6 +194,10 @@
         width: 100%;
         padding: 0 10px;
     }
+    .dropdown-content.d1{
+        width: 100%;
+        background: #000;
+    }
     
 
  }
